fix(style): code view dark mode color

--- a/src/assets/style/variable.less
+++ b/src/assets/style/variable.less
@@ -2,7 +2,10 @@ body {
   --color-white-1: #fff;
   --color-white-2: #fff;
   --color-white-3: #fff;
+  --color-white-4: #fff;
+  --color-white-5: #fff;
   --color-seal-black-1: #000;
+  --color-hint-active-bg: var(--arcoblue-6);
   --color-button-close: #fff;
   --color-border-input-disabled: #fff;
   --color-bg-input-disabled: var(--color-fill-1);
@@ -20,7 +23,6 @@ body {
   --seal-border-gray-2: var(--seal-border-color);
   --color-border-input: var(--color-border-2);
   --color-tooltip-content: #fff;
-  // --seal-border-gray-2: #e5e6eb;
   --color-menu-light-bg: 247, 248, 250;
   --seal-color-bg-1: rgb(var(--arcoblue-6));
   --sealblue-6: rgb(var(--arcoblue-6));
@@ -234,12 +236,15 @@ body[arco-theme='dark'] {
   --color-background-3: 52, 62, 76;
   --color-modal-bg: 21, 21, 21;
   --color-seal-black-1: rgba(255, 255, 255, 0.7);
+  --color-hint-active-bg: var(--color-background-1);
   --black-1: rgb(var(--color-background-1));
   --black-2: rgb(var(--color-background-2));
   --black-3: rgb(var(--color-background-3));
   --color-white-1: var(--black-1);
   --color-white-2: var(--black-2);
   --color-white-3: var(--black-3);
+  --color-white-4: rgba(255, 255, 255, 0.5);
+  --color-white-5: rgba(255, 255, 255, 0.7);
   --color-white: var(--black-2);
   --color-bg-white: var(--black-2);
   --color-bg-2: var(--black-2);
